--- a/templates/java/cd-steps-template.yml
+++ b/templates/java/cd-steps-template.yml
@@ -10,20 +10,20 @@ steps:
   artifact: build-artifact
 
 # Login no registry
-- script: |
-    echo "$(registryPassword)" | helm registry login $(registryServerName) --username $(registryLogin) --password-stdin
-  displayName: login to acr using helm
+# - script: |
+#     echo "$(registryPassword)" | helm registry login $(registryServerName) --username $(registryLogin) --password-stdin
+#   displayName: login to acr using helm
 
 # Puxar a versão mais recente do gráfico do ACR para o agente
-- script: |
-    helmChartVersion=$(jq .helmChartVersion $(pipeline.workspace)/ci-pipeline/build-artifact/variables.json -r)
-    helm chart pull $(registryServerName)/charts/$(projectName):$helmChartVersion
-  displayName: get helm chart on agent
+# - script: |
+#     helmChartVersion=$(jq .helmChartVersion $(pipeline.workspace)/ci-pipeline/build-artifact/variables.json -r)
+#     helm chart pull $(registryServerName)/charts/$(projectName):$helmChartVersion
+#   displayName: get helm chart on agent
 
 # Extrair o gráfico em uma pasta
-- script: |
-    helm chart export $(registryServerName)/charts/$(projectName):$helmChartVersion --destination $(pipeline.workspace)/install
-  displayName: export the chart to folder
+# - script: |
+#     helm chart export $(registryServerName)/charts/$(projectName):$helmChartVersion --destination $(pipeline.workspace)/install
+#   displayName: export the chart to folder
 
 # Login no AKS
 # - script: |
@@ -36,27 +36,27 @@ steps:
 #   displayName: get credentials
 
 # Deploy no aks
-# - script: |
-#     az login --service-principal -u $(aksSpId) -p '$(aksSpSecret)' --tenant $(aksSpTenantId)
-#     az aks get-credentials -n $(aks) -g $(rg)
-#     echo "$(registryPassword)" | helm registry login $(registryServerName) --username $(registryLogin) --password-stdin
-#     helmChartVersion=$(jq .helmChartVersion $(pipeline.workspace)/ci-pipeline/build-artifact/variables.json -r)
-#     helm chart pull $(registryServerName)/charts/$(projectName):$helmChartVersion
-#     helm chart export $(registryServerName)/charts/$(projectName):$helmChartVersion --destination $(pipeline.workspace)/install
-#     helm upgrade \
-#       --namespace $(k8sNamespace) \
-#       --create-namespace \
-#       --install \
-#       --wait \
-#       --version $helmChartVersion \
-#       --set image.repository=$(registryServerName)/$(projectName) \
-#       --set ingress.enabled=false \
-#       -f $(pipeline.workspace)/ci-pipeline/build-artifact/azure-template-helm-chart/templates/java/Chart.yaml \
-#       -f $(pipeline.workspace)/ci-pipeline/build-artifact/azure-template-helm-chart/templates/java/values.yaml \
-#       $(projectName) \
-#       $(pipeline.workspace)/install/$(projectName)
-#   failOnStderr: true
-#   displayName: 'deploy helm chart'
+- script: |
+    az login --service-principal -u $(aksSpId) -p '$(aksSpSecret)' --tenant $(aksSpTenantId)
+    az aks get-credentials -n $(aks) -g $(rg)
+    echo "$(registryPassword)" | helm registry login $(registryServerName) --username $(registryLogin) --password-stdin
+    helmChartVersion=$(jq .helmChartVersion $(pipeline.workspace)/ci-pipeline/build-artifact/variables.json -r)
+    helm chart pull $(registryServerName)/charts/$(projectName):$helmChartVersion
+    helm chart export $(registryServerName)/charts/$(projectName):$helmChartVersion --destination $(pipeline.workspace)/install
+  #   helm upgrade \
+  #     --namespace $(k8sNamespace) \
+  #     --create-namespace \
+  #     --install \
+  #     --wait \
+  #     --version $helmChartVersion \
+  #     --set image.repository=$(registryServerName)/$(projectName) \
+  #     --set ingress.enabled=false \
+  #     -f $(pipeline.workspace)/ci-pipeline/build-artifact/azure-template-helm-chart/templates/java/Chart.yaml \
+  #     -f $(pipeline.workspace)/ci-pipeline/build-artifact/azure-template-helm-chart/templates/java/values.yaml \
+  #     $(projectName) \
+  #     $(pipeline.workspace)/install/$(projectName)
+  # failOnStderr: true
+  displayName: 'deploy helm chart'
 
 # Implantar o gráfico para AKS
 # - task: HelmDeploy@0
